@@ -1,3 +1,11 @@
+2011-12-15  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-find-file-exists-command): Spelling fixes.
+	(tramp-remote-coding-commands): Check "test -c /dev/stdout".  If
+	failing, a regular file would be written otherwise.  Reported by
+	Dmitry Kurochkin <dmitry.kurochkin@gmail.com>.
+	(tramp-find-inline-encoding): Embed checks in parentheses.
+
 2011-12-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (top): Require 'cl.
